--- a/clinic/templates/clinic/login.html
+++ b/clinic/templates/clinic/login.html
@@ -25,7 +25,7 @@
     <form method="post" class="auth-form" novalidate>
       {% csrf_token %}
       <div class="auth-field">
-        <label for="id_username">Username</label>
+        <label for="id_username">Username or Email</label>
         {{ form.username }}
         {% if form.username.errors %}
           <div class="auth-error">{{ form.username.errors.0 }}</div>
