--- a/clinic/templates/clinic/home.html
+++ b/clinic/templates/clinic/home.html
@@ -1,6 +1,6 @@
 {% extends 'clinic/base.html' %}
 {% load static %}
-{% block title %}ePetCare - Modern Pet Healthcare{% endblock %}
+{% block title %}ePetCare{% endblock %}
 
 {% block head %}
 <link rel="stylesheet" href="{% static 'clinic/home.css' %}?v={% now "U" %}">
