--- a/clinic/templates/clinic/base_auth.html
+++ b/clinic/templates/clinic/base_auth.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="{% static 'clinic/modern.css' %}?v={% now "U" %}">
   <link rel="stylesheet" href="{% static 'clinic/modal.css' %}?v={% now "U" %}">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="{% static 'clinic/images/epetcare-favicon.png' %}">
-    <link rel="icon" type="image/svg+xml" href="{% static 'clinic/images/epetcare-favicon.svg' %}">
+    <link rel="icon" type="image/png" href="{% static 'clinic/images/epetcare-logo.png' %}">
+    <link rel="apple-touch-icon" href="{% static 'clinic/images/epetcare-logo.png' %}">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
