--- a/clinic/templates/clinic/profile_set_password.html
+++ b/clinic/templates/clinic/profile_set_password.html
@@ -1,12 +1,12 @@
-{% extends 'clinic/dashboard_base.html' %}
+{% extends 'clinic/base_auth.html' %}
 {% load static %}
 {% block title %}Set New Password - ePetCare{% endblock %}
 
-{% block head_extra %}
+{% block head %}
 <link rel="stylesheet" href="{% static 'clinic/dashboard-common.css' %}?v={% now 'U' %}">
 {% endblock %}
 
-{% block dash_content %}
+{% block content %}
 <section class="dash-hero">
   <div class="hero-main">
     <div class="hero-title-row">
