--- a/clinic/templates/clinic/notifications.html
+++ b/clinic/templates/clinic/notifications.html
@@ -69,7 +69,7 @@
           <div class="notification-title">{{ n.title }}</div>
           <div class="notification-text">{{ n.message }}</div>
           <div class="notification-meta">
-            {{ n.created_at|date:'Y-m-d H:i' }}
+            {{ n.created_at|date:'M d, Y' }} at {{ n.created_at|date:'g:i A' }}
             {% if not n.is_read %}
               <a class="btn-link notification-action" href="{% url 'notification_mark_read' n.id %}">Mark as read</a>
             {% endif %}
